<?xml version="1.0"?>
<package>
  <name>panther_gazebo</name>
  <version>1.0.0</version>
  <description>Panther Gazebo simulator.</description>
  
  <license>MIT</license>
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <url type="repository">https://github.com/rpanther/panther_simulation</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>panther_description</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
