<?xml version="1.0"?>
<package>
  <name>panther_simulation</name>
  <version>1.0.0</version>
  <description>Panther Gazebo simulator</description>
  
  <maintainer email="raffaello@rnext.it">Raffaello Bonghi</maintainer>
  <license>MIT</license>
  
  <url type="website">https://rnext.it/panther</url>
  <url type="repository">https://github.com/rpanther/panther_simulation</url>
  <author email="raffaello@rnext.it">Raffaello Bonghi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>panther_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

</package>
